fixed appending ul issue, added buffer to fit behind fixed header, footer

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -44,3 +44,11 @@ footer , h5{
     padding: 10px;
     color: var(--white) 
 }
+
+.topBuffer {
+    height: 120px
+}
+
+.bottomBuffer {
+    height: 100px;
+}
